--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
       "homepage": "http://red-robot.co.uk"
     },
     {
-     "name": "Greg Haddow",
+     "name": "Gregory Haddow",
      "email": "greg@greghaddow.co.uk",
      "homepage": "http://www.greghaddow.co.uk"
     }
